--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,16 @@ body {
   -ms-user-select: none;      /* IE 10+ */
   user-select: none;          /* Likely future */      
 }
+.share_btn {
+	display: inline-block;
+	width: 100px;
+	height: 40px;
+	color: #ffffff;
+	background-color: #000000;
+	text-align: center;
+	line-height: 40px;
+	cursor: pointer;
+}
 #nav {
 	background: #000000;
 	color: #ffffff;
@@ -25,8 +35,10 @@ body {
 	cursor: default;
 }
 #video {
-	margin-top: 10px;
-	margin-left: 20px;
+	margin-top: 40px;
+	width: 640px;
+	margin: 0 auto;
+	display: block;
 }
 #my_video {
 	width: 640px;
@@ -78,4 +90,18 @@ body {
 	margin-top: -3000;
 	margin-left: -3000;
 	opacity: 0.8;
+}
+#close_btn {
+	display: block;
+	color: #ffffff;
+	background-color: #000000;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+	line-height: 30px;
+	float: right;
+	margin-right: 40px;
+	margin-top: -70px;
+	border: 1px solid #ffffff;
+	cursor: pointer;
 }
